Hello world done.

--- a/src/app/main.html
+++ b/src/app/main.html
@@ -1,8 +1,1 @@
-<div class="main-container">
-  <fountain-header></fountain-header>
-  <main class="main">
-    <fountain-title></fountain-title>
-    <fountain-techs></fountain-techs>
-  </main>
-  <fountain-footer></fountain-footer>
-</div>
+<h1>{{ $ctrl.hello }}</h1>
